--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "keywords": [],
   "author": "",
-  "engine": "20.14.0",
+  "engines": {
+    "node": "20.14.0"
+  },
   "license": "ISC",
   "description": "",
   "dependencies": {
